--- a/resources/assets/sass/_masthead.scss
+++ b/resources/assets/sass/_masthead.scss
@@ -7,8 +7,8 @@ header.masthead {
     .overlay {
       position: absolute;
       background-color: $gray-900;
-      height: 100%;
-      width: 100%;
+      height: auto;
+      max-width: 100%;
       top: 0;
       left: 0;
       opacity: 0.3;
